refactor: update PgVectorConfig for enhanced vector database setup